@@ -1,3 +1,8 @@
+2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSView.m: Add cast to id in case nil is not "id".  This
+        is the same fix that was done by Frederick Seiffert on base.
+
 2021-10-27 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSPopUpButtonCell.m
